--- a/Agenda.DAL.Test/.github/workflows/test.yml
+++ b/Agenda.DAL.Test/.github/workflows/test.yml
@@ -2,11 +2,9 @@
 
 on:
   push:
-    branches:
-      - main
+    branches: [ main ]
   pull_request:
-    branches:
-      - main
+    branches: [ main ]
 
 jobs:
   build:
