Ajuste para executar os testes em memoria

--- a/Agenda.Api/appsettings.json
+++ b/Agenda.Api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "con": "Data Source=C:\\Users\\rafael.melo\\Documents\\Projetos\\solucao-exemplo\\Agenda.db;"
+  },
   "AllowedHosts": "*"
 }
