--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -36,4 +36,4 @@ jobs:
       run: dotnet build ./Agenda.sln --configuration Release --no-restore
 
     - name: Run tests
-      run: dotnet test .\Agenda.DAL.Test\Agenda.DAL.Test.csproj --configuration Release --no-build --verbosity normal
+      run: dotnet test .\Agenda.DAL.Test\Agenda.DAL.Test.csproj --no-restore --no-build --configuration Release --verbosity normal
