--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -36,5 +36,4 @@ jobs:
       run: dotnet build ./Agenda.sln --configuration Release --no-restore
 
     - name: Run tests
-      run: dotnet test ./Agenda.DAL.Test\Agenda.DAL.Test.csproj --no-restore --no-build --configuration Release --verbosity normal
-      continue-on-error: false
+       run: dotnet test ./Agenda.DAL.Test/Agenda.DAL.Test.csproj --no-restore --no-build --configuration Release --logger "trx;LogFileName=test_results.trx"
